--- a/tourOfHeroes/index.html
+++ b/tourOfHeroes/index.html
@@ -31,6 +31,8 @@
       System.import('app/main')
             .then(null, console.error.bind(console));
     </script>
+
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <!-- 3. Display the application -->
